feat: Adding user type CRUD implementation
